Added CSRF trusted origins setting and updated env template

--- a/.env.templ
+++ b/.env.templ
@@ -46,6 +46,9 @@
 # Secure Proxy SSL Header: Determines what header should be set when connection is secure
 # SECURE_PROXY_SSL_HEADER='HTTP_X_FORWARDED_PROTO=https'
 
+# A list of trusted origins for CSRF requests
+# CSRF_TRUSTED_ORIGINS=http://localhost:8000
+
 # LDAP Host: The host of the ldap server
 # LDAP_NET_HOST=ldaps://you.ldap.com
 
